fixed grid gap on firefox and added created date

--- a/frontend/src/pages/add-task/add-task.styles.css
+++ b/frontend/src/pages/add-task/add-task.styles.css
@@ -6,7 +6,6 @@
     margin: 0 auto;
     width: 100%;
     max-width: 300px;
-    /* background: #FFFAFA; */
     padding: 10px 15px 20px 15px;
     border-radius: 10px;
     border: 1px solid rgb(85, 85, 85, 0.3);
@@ -15,6 +14,7 @@
 
 #form {
     display: grid;
+    grid-gap: 35px;
     align-items: center;
 }
 
